--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = Advent of Code 2022
 
-This repository contains my solution to 2022's https://adventofcode.com/2022[Advent of Code] puzzles in Awk.
+This repository contains my solution to 2022's https://adventofcode.com/2022[Advent of Code] puzzles in SQL using Postgres.
 
 The easiest way to run these is using docker – simply execute run.sh <day> to build a docker image and execute the specific day.
 
